IndexedDB: Transactions without any request scheduled should abort itself. https://bugs.webkit.org/show_bug.cgi?id=88052

Reviewed by Kentaro Hara.

This is needed for indexedDB to make it work for JSC. We need to clean up all the
pending transactions(transactions without any request scheduled) when leaving Javascript context.

Manually tested using the existing test LayoutTests/storage/indexeddb/tutorial.html

* bindings/js/JSMainThreadExecState.cpp:
(WebCore):
(WebCore::JSMainThreadExecState::didLeaveScriptContext):
* bindings/js/JSMainThreadExecState.h:
(WebCore::JSMainThreadExecState::~JSMainThreadExecState):
(JSMainThreadExecState):


Canonical link: https://commits.webkit.org/106512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119876 268f45cc-cd09-0410-ab3c-d52691b4dbfc